Implemented Various loss to compare

--- a/fusion_with_occlusion/fusion_tests/TSDF-Integration-Check.ipynb
+++ b/fusion_with_occlusion/fusion_tests/TSDF-Integration-Check.ipynb
@@ -30,12 +30,119 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import open3d as o3d\n",
     "import numpy as np\n",
     "import ipyvolume as ipv\n",
     "\n",
     "import sys \n",
     "sys.path.append(\"../\")\n",
     "sys.path.append(\"../../\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be1afd39",
+   "metadata": {},
+   "source": [
+    "### Compare different TSDFVolume"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "445da1f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datadir = \"/media/srialien/Elements/AT-Datasets/DeepDeform/new_test/foxWDFS_Actions2_cam1/\"\n",
+    "color = o3d.io.read_image(os.path.join(datadir,'color',\"0000.png\"))\n",
+    "depth = o3d.io.read_image(os.path.join(datadir,'depth',\"0000.png\"))\n",
+    "\n",
+    "rgbd = o3d.geometry.RGBDImage.create_from_color_and_depth(\n",
+    "    color, depth, depth_trunc=4.0, convert_rgb_to_intensity=False)\n",
+    "\n",
+    "camera = np.loadtxt(os.path.join(datadir,\"intrinsics.txt\"))\n",
+    "camera = o3d.camera.PinholeCameraIntrinsic(512,500,*camera[ [0,1,0,1],[0,1,2,2]])\n",
+    "\n",
+    "vol_dim = 256\n",
+    "voxel_size = 4/256\n",
+    "o3d_volume = o3d.pipelines.integration.UniformTSDFVolume(vol_dim*voxel_size,\n",
+    "vol_dim,\n",
+    "0.4,\n",
+    "o3d.pipelines.integration.TSDFVolumeColorType.RGB8,np.array([-1.5199234,-0.7890313,0.]))\n",
+    "\n",
+    "o3d_volume_scalable = o3d.pipelines.integration.ScalableTSDFVolume(voxel_length=4/512,sdf_trunc=0.04,\n",
+    "color_type=o3d.pipelines.integration.TSDFVolumeColorType.RGB8)\n",
+    "\n",
+    "o3d_volume.integrate(\n",
+    "    rgbd,\n",
+    "    camera,\n",
+    "    np.eye(4))\n",
+    "\n",
+    "o3d_volume_scalable.integrate(\n",
+    "    rgbd,\n",
+    "    camera,\n",
+    "    np.eye(4))\n",
+    "\n",
+    "mesh_open3d = o3d_volume.extract_triangle_mesh()\n",
+    "\n",
+    "mesh_open3d_scalable = o3d_volume_scalable.extract_triangle_mesh()\n",
+    "vertices = np.asarray(mesh_open3d_scalable.vertices)\n",
+    "c_red = (0. / 255., 0 / 255., 0 / 255.)\n",
+    "mesh_open3d_scalable.vertex_colors = o3d.utility.Vector3dVector(np.tile(np.array(c_red).reshape((1,3)),(vertices.shape[0],1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c6b9e305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o3d.visualization.draw_geometries([mesh_open3d,mesh_open3d_scalable])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f13efc2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(45469,)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ar = np.asarray(o3d_volume.extract_volume_tsdf())\n",
+    "ar[ar<0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f703d524",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TriangleMesh with 11641 points and 20729 triangles."
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mesh_open3d_scalable "
    ]
   },
   {
@@ -48,79 +155,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "89781f95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tsdf_path = \"/media/srialien/Elements/AT-Datasets/DeepDeform/new_test/foxWDFS_Actions2_cam1/results/tsdf/105.pkl\"\n",
+    "import pickle \n",
+    "with open(tsdf_path,\"rb\") as f: \n",
+    "    data = pickle.load(f)\n",
+    "tsdf_vol,color_vol,weight_vol = data\n",
+    "# from tsdf import TSDFVolume\n",
+    "# truncated_region = np.ones_like(tsdf_vol)\n",
+    "# TSDFVolume.compute_truncated_region(tsdf_vol,truncated_region,1.2)\n",
+    "# ipv.quickvolshow(tsdf_vol,level=0,opacity=[1,1,1], level_width=0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "856752a6",
+   "metadata": {},
+   "source": [
+    "## Use open3d UniformTSDF "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3673ac47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. ... 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inject_data = data[[0,2]].reshape(2,-1).T\n",
+    "print(inject_data[inject_data!=0][::100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "795094fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inject_data = data[[0,2]].reshape(2,-1).T\n",
+    "inject_data = o3d.utility.Vector2dVector()\n",
+    "vol_dim = 256\n",
+    "voxel_size = 4/256\n",
+    "volume = o3d.pipelines.integration.UniformTSDFVolume(vol_dim*voxel_size,\n",
+    "vol_dim,\n",
+    "0.4,\n",
+    "o3d.pipelines.integration.TSDFVolumeColorType.RGB8,np.array([-1.5199234,-0.7890313,0.]))\n",
+    "volume.inject_volume_tsdf(inject_data) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f2a2dd46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mesh = volume.extract_triangle_mesh()\n",
+    "o3d.visualization.draw_geometries([mesh])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1249af24",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [1., 1., 1., ..., 1., 1., 1.],\n",
-       "        [1., 1., 1., ..., 1., 1., 1.],\n",
-       "        [1., 1., 1., ..., 1., 1., 1.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[1., 1., 1., ..., 1., 1., 1.],\n",
-       "        [1., 1., 1., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [1., 1., 1., ..., 1., 1., 1.],\n",
-       "        [1., 1., 1., ..., 1., 1., 1.],\n",
-       "        [1., 1., 1., ..., 1., 1., 1.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]]], dtype=float32)"
+       "TriangleMesh with 0 points and 0 triangles."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tsdf_path = \"/media/srialien/2e32b92f-33a0-4f62-a89f-445621302f09/DeepDeform_Tests/dinoET_act2_cam2/results/tsdf/0.pkl\"\n",
-    "import pickle \n",
-    "with open(tsdf_path,\"rb\") as f: \n",
-    "    data = pickle.load(f)\n",
-    "tsdf_vol,color_vol,weight_vol = data\n",
-    "from tsdf import TSDFVolume\n",
-    "truncated_region = np.ones_like(tsdf_vol)\n",
-    "TSDFVolume.compute_truncated_region(tsdf_vol,truncated_region,1.2)\n",
-    "# ipv.quickvolshow(tsdf_vol,level=0,opacity=[1,1,1], level_width=0.1)"
+    "mesh"
    ]
   },
   {
